# voice2txt

./: .gitignore  README.md  build.ps1  capsule.html  package-lock.json  package.json  prd.md  settings.html  setup-wsl.sh  tsconfig.json  vite.config.ts
.cargo/: config.toml
docs/superpowers/specs/: 2026-04-01-windows-speech-backend-design.md
scripts/: gen_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  diag.rs  hotkey.rs  inject.rs  llm.rs  main.rs  stt.rs  stt_router.rs  windows_stt.rs
src/capsule/: Capsule.tsx  capsule.css  main.tsx
src/settings/: Settings.tsx  main.tsx
